--- a/css/style.scss
+++ b/css/style.scss
@@ -114,8 +114,12 @@ $secondaryColor: #1C4961;
 }
 .recommended-destination-navbar ul li{
     display: inline-block;
-    margin: 10px 20px;
-    
+    margin: 0 20px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    padding-bottom: 10px;
+    cursor: pointer;
 }
 .recommended-destination-navbar ul li a{
     text-decoration: none;
@@ -123,12 +127,15 @@ $secondaryColor: #1C4961;
     font-weight: bold;
     padding-bottom: 10px;
 }
-.recommended-destination-navbar ul li a.active,
-.recommended-destination-navbar ul li a:hover
+.recommended-destination-navbar ul li.active,
+.recommended-destination-navbar ul li:hover
 {
     border-bottom: 5px solid #163235;
     color: #163235;
 
+}
+.recommended-destination-card{
+    margin-top: 20px;
 }
 .recommended-destination-card img{
     width: 100%;
